# STOI

./: Cargo.toml  README.md
fast-stoi-python/: Cargo.toml  README.md
fast-stoi-python/tests/: test_stoi.py
fast-stoi/src/: extended.rs
pystoi/: Cargo.toml  pyproject.toml
pystoi/src/: lib.rs
pystoi/stoi/: __init__.py
pystoi/tests/: test_stoi.py
pystoi/tests/bench/: test_speed.py
stoilib/: Cargo.toml
stoilib/src/: constants.rs  frames.rs  lib.rs  octave.rs  resample.rs  standard.rs  stft.rs  upfirdn.rs
